@@ -619,9 +619,10 @@ define function, begin
 597,runningonlinux,0          # returns true if the device is Linux
 598,nextnpcreference,1,0      # Iterating over NPCs: reference to next NPC
 599,input string with mouse keyboard,2,0,-1 # pop up a virtual keyboard that responds to mouse clicks
-600,runningonouya,0           #returns true if the device is OUYA (see also "running on console")
-601,unhidemousecursor,0       #unhides the OS mouse cursor
-602,hidemousecursor,0         #hides the OS mouse cursor
+600,runningonouya,0           # returns true if the device is OUYA (see also "running on console")
+601,unhidemousecursor,0       # unhides the OS mouse cursor
+602,hidemousecursor,0         # hides the OS mouse cursor
+603,pixelfocuscamera,3,0,0,2  # pixel focus camera(x,y,pixelstep)
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
