@@ -1,6 +1,6 @@
 WHAT IS NEW?
 
-??? ?? 2013 [Callipygous]
+??? ?? 2015 [Callipygous]
 
   * New Features
     * While placing doors in the map editor you can now specify door
@@ -154,6 +154,7 @@ WHAT IS NEW?
     * "input string with virtual keyboard",
       "input string with mouse keyboard" [James]
     * "unhide mouse cursor", "hide mouse cursor" [James]
+    * "pixel focus camera" [James]
 
   * Performance Fixes
     * Fixed delay when opening a menu that happened when a large number
